@@ -5,6 +5,8 @@ MINOR IMPROVEMENTS
 * class2tree() can handle NA in classification objects.
 * classification.eolid() and classification.colid return the submitted name along with the classification.
 
+BUG FIXES
+*classification.gbifid() did not return the correct result when taxon not found.
 
 taxize 0.2.2
 ===============
